assets/css/custom.scss
/* ... */
/*****************************
 * wrapper for buttons to center
 * buttons across container
 *****************************/
h5 {
	text-align: center;
	margin: 20px 0;
}

/*****************************
 * navbar
 *****************************/
.navbar {
	background-color: #f8f8f8;
	border-color: #e7e7e7;
	span {
		background-color: $color_gray;
	}
	button {
		border: 1px solid $color_gray;
	}
	li.active > a {
		background-color: $color_shady_lady_approx;
	}
	li > a:focus {
		color: #313131;
	}
	.dropdown:hover .dropdown-menu {
		display: block;

	}
}

/* =============================================
				Index Page
============================================= */

#features {
	.feature-img {
		margin-top: 20px;
		margin-right: auto;
		margin-left: auto;
		width: 180px;
		height: 180px;
		background-size: cover;
	}
	@include desktop {
	    h2 {
			color: #313131;
			text-align: center;
			font-size: 25px;
			font-weight: 700;
			line-height: 22px;
			font-family: "Open Sans";
			margin-bottom: 15px;
	    }
	    p {
			font-size: 18px;
			text-align: center;
			font-family: "open sans";
			font-weight: 400;
	    }
	}

	@include tablet {
	    h2 {
			font-size: 20px;
			line-height: 22px;
	    }
	    p {
			font-size: 13px;
	    }
	  	.feature-img {
			width: 100px;
			height: 100px;
	  	}
	}

	@include mobile {
		text-align: center;
	    h2 {
			font-size: 20px;
			line-height: 23px;
			margin-top: 5px;
			margin-bottom: 4px;
	    }
	    p {
			font-size: 14px;
			line-height: 16px;
			margin-bottom: 0;
	    }
		.feature-img {
			margin-top: 0;
			width: 80px;
			height: 80px;
		}
	}

	.feature-img-left {
		background-image: url("/assets/img/Homepage_Icons/Icon_For-Entrepreneurs.png");
		&:hover {
			background-image: url("/assets/img/Homepage_Icons/Icon_For-Entrepreneurs_Red.png");
		}
	}

	.feature-img-center {
		background-image: url("/assets/img/Homepage_Icons/Icon_Coworking.png");
		&:hover {
			background-image: url("/assets/img/Homepage_Icons/Icon_Coworking_Red.png");
		}
	}

	.feature-img-right {
		background-image: url("/assets/img/Homepage_Icons/Icon_LTC.png");
		&:hover {
			background-image: url("/assets/img/Homepage_Icons/Icon_LTC_Red.png");
		}
	}
}

/* =============================================
				Section for pages
=============================================  */
.container section {
	width: 100%;
    min-height: 100%;
    display:table;
    height:inherit;
    margin-top: 50px;
	img {
		vertical-align: middle;
		display: inline-block;
		/*margin-top: 50px;*/
		width: 80%;
		margin-left: 10%;
	}
	.row {
	    width: 100%;
	    height: 100%;
	    display:table-row;
	}
	.col-left, .col-right {
	    width: 50%;
	    display: table-cell;
	    vertical-align: middle;
	}
}

/* =============================================
				Email Popup
============================================= */
.modal-dialog {
	left: 0;
}

.modal-popup {
	overflow-y: hidden;
	.modal-header {
		background: $color_cardinal_approx;
	}
	.modal-body {
		h5 {
			text-align: left;
			color: $color_cardinal_approx;
			margin-top: 0;
			line-height: 40px;
		}
		input {
			border-radius: 4px;
			height: 46px;
		}
		input.button {
			color: white;
			background-color: $color_cardinal_approx;
			border-radius: 4px;
			font-size: 20px;
			&:hover {
				background-color: $color_cardinal_approx_shade;
			}
		}
	}
}

/* =============================================
					About
================================================ */
.About {
	.description {
		position: absolute;
		top: 0;
		bottom: 0;
		left: 0;
		right: 0;
	  background-color: white;
	  color: #B81124;
	  visibility: hidden;
	  opacity: 0;
		&:after {
			display: grid;
			content: '';
			border-bottom: 3px solid #B81124;
			@include mobile {
				border-bottom: none;
			}
			@include tablet {
				border-bottom: none;
			}
			transform: scaleX(0);
			transition: transform 500ms ease-in-out;
		}
		&:hover {
			&:after {
				transform: scaleX(1);
			}
		}
	}
	.CV {
		font-size: 15pt;
		font-weight: bold;
		text-align: center;
		font-family: "Open Sans";
		@include mobile {
			font-size: 10pt;
			padding-top: 40px;
		}
		@include tablet {
			font-size: 12pt;
			padding-top: 30px;
		}
		@media (max-width: 568px){
			font-size: 6pt;
			padding-top: 25px;
		}
		@media (min-width: 1024px){
			padding-top: 50px;
		}
		height: 100%;
	}
	.imgWrap {
  	position: relative;
		&:hover {
			.description {
				visibility: visible;
  			opacity: 1;
				animation-name: fadeIn;
				animation-timing-function: ease-in;
				animation-duration: .3s;
				animation-fill-mode: forwards;
			}
			.CV {
				animation-name: fadeIn;
				animation-timing-function: ease-in;
				animation-duration: 1s;
			}
		}
	}
	@keyframes fadeIn {
		0% {
			opacity: 0;
		}
		100%{
			opacity: 1;
		}
	}
	@keyframes fadeOut {
		0% {
			opacity: 1;
		}
		100% {
			opacity: 0;
		}
	}
	.subheader {
		background-image: url("/assets/img/headers/about_us.png");
	}
	#core-values {
		.col-sm-3, col-xs-6 {
			padding-left: 0;
		}
		img {
			width: 95%;
			/*box-shadow: 5px 5px 5px #2e2e2e;*/
			margin-bottom: 35px;
		}
		p {
			font-weight: bold;
			font-size: 16px;
			line-height: 20px;
			text-align: center;
			&:first-child {
				margin-bottom: 0;
			}
			&:last-child {
				margin-top: 0;
			}
		}
		@include mobile {
			img {
				padding-right: 0;
				/*box-shadow: 10px 10px 5px #2f2f2f;*/
				margin-bottom: 10px;
			}
		}
	}
	.blog-post {
		background-color: $color_light_gray;
		height: 250px;
		h3 {
			height: 150px;
			padding: 8% 5%;
			line-height: 32px;
		}
		a, h5 {
			text-align: center;
		}
	}
	.col-xs-6 {
		padding-left: 0;
	}
}

/*dashboard*/

.dashboard {
	.subheader {
		background-image: url("/assets/img/headers/about_us.png");
	}
}
/* =============================================
				Internships
================================================ */
.Internships {
	.subheader {
		background-image: url("/assets/img/headers/for_entrepreneurs.png");
	}
	img {
		width: 80%;
		margin-left: 10%;
	}
}
/* ... */

